# dl-kp

./: .gitignore  LICENSE  README.md  dl-kp.example.yaml  dl-kp.py  main.py  pyproject.toml
.github/workflows/: lint.yml  release.yml
utils/: Config.py  Downloader.py  Playlist.py  YtDLP.py  prompts.py  retry.py  system.py  video.py
