[tool.poetry]
name = "dl-kp"
version = "0.1.0"
description = ""
authors = ["Maxim Gavrilenko <parrysh@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
yt-dlp = "^2023.10.7"
m3u8 = "^3.6.0"
inquirer = "^3.1.3"
commit-linter = "^1.0.3"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
