[tool.poetry]
name = "dl-kp"
version = "0.1.0"
description = ""
authors = ["Maxim Gavrilenko <parrysh@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.14"
yt-dlp = "^2025.8.11"
m3u8 = "^6.0.0"
commit-linter = "^1.0.3"
questionary = "^2.1.0"
pyyaml = "^6.0.2"



[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
pyinstaller = "^6.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
